<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.fragment.ForecastFragment">

    <LinearLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/ic_outline_cloud_24"
            android:layout_gravity="center"
            android:contentDescription="@string/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_cities_found"
            android:textSize="18sp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_cities_found_message"
            android:gravity="center"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_city"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
