<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.fragment.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:id="@+id/layout_search"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="16dp">

        <ImageButton
            android:id="@+id/icon_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/icon"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_round_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_indigo"
            android:drawableStart="@drawable/ic_round_search_24"
            android:drawablePadding="16dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_search"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        android:visibility="gone"
        tools:listitem="@layout/item_search" />

    <LinearLayout
        android:id="@+id/layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/ic_round_search_24"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"
            app:tint="?colorPrimary" />

        <TextView
            android:id="@+id/text_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_cities_found"
            android:textSize="18sp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_message"
            android:gravity="center"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="64dp" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/layout_shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:shimmer_auto_start="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
            <include layout="@layout/shimmer_search" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>